Pfff, after hours of hopeless battles and reading StackOverflow, I finally made a fix that allows to store AND reconstruct programs correctly by making params an instance attribute and not class. PS Sorry Python. You were right all along.

--- a/translator/static/translator/css/create.css
+++ b/translator/static/translator/css/create.css
@@ -48,6 +48,10 @@ min-height:60px;
     border: 1px solid grey;
 }
 
+.empty-program-box{
+border: 3px dashed grey;
+}
+
 .arrow-box{
     font-size:32px;
     min-width:32px;
